--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+label{
+  font-weight: 550 ;
+  font-size:10px;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.mainform{
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 10px;
+}
+body{
+  font-weight: 600px;
+  background-color: rgba(130, 135, 135, 0.11);
+}
+.indent {
+  margin-top: -0.11px;
+  text-indent: 20px;
+  color: #25578f;
 }
