--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ body{
   text-indent: 20px;
   color: #25578f;
 }
+.submitbtn{
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
