--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ label{
 }
 body{
   font-weight: 600px;
-  background-color: rgba(130, 135, 135, 0.11);
+  background-color: rgba(28, 45, 22, 0.15)
 }
 .indent {
   margin-top: -0.11px;
@@ -27,10 +27,9 @@ body{
 .savebtn{
   height:25px;
   width: 50px;
-  background-color: #4f77a5;
+  background-color: #4695e9;
   border: none;
   color: white;
   border-radius: 3px;
   font-size: 700;
-  font-family:'Times New Roman', Times, serif ;
 }
